Fix extra padding on right side

--- a/style.css
+++ b/style.css
@@ -590,6 +590,8 @@ nav ul li a:hover {
 		padding-bottom: 8px;
 		margin: 0;
 		border-bottom: 1px solid #576979;
+		border-left: none;
+		border-right: none;
 	}
 
 	nav ul li a:link,
@@ -611,7 +613,7 @@ nav ul li a:hover {
 		margin: 0 auto;
 		border-style: none;
 		border-radius: 0;
-		padding: 0px 10px 0px 10px;
+		padding: 0px 0px 0px 0px;
 		box-shadow: none;
 		border-top: solid;
 		border-bottom: solid;
